# celldetection

./: .gitignore  pyproject.toml
celldetection/data/: toydata.py
celldetection_scripts/: cpn_inference.py
